deploy/retrieveUnpackaged/objects/Server_Build__c.object
<CustomObject>
    <description>This object is used for creating new server configurations and to track server build timelines.</description>
    <fields>
        <fullName>Account_Manager__c</fullName>
        <label>Account Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N50000001nyYyEAI</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Server Build</relationshipLabel>
        <relationshipName>R00N50000001nVpnEAE</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Acct_Number__c</fullName>
        <formula>Account_Name__r.CORE_Account_number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Acct Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Device_Description__c</fullName>
        <label>Device Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Device_Type__c</fullName>
        <label>Device Type</label>
        <picklist>
            <picklistValues>
                <fullName>DAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Firewall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IDS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Linux Server</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loadbalancer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Preventier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Switch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Virtual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Windows Server</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Expedite__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Expedite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IDS_Notes__c</fullName>
        <label>IDS Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IDS_Walk_Through__c</fullName>
        <label>IDS Walk Through</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Online_Complete__c</fullName>
        <inlineHelpText>Online Complete due date</inlineHelpText>
        <label>Online Complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Other_Devices_Notes__c</fullName>
        <label>Other Devices Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Segment_Configuration__c</fullName>
        <inlineHelpText>Due Date to Support from DCOPs</inlineHelpText>
        <label>Segment Configuration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status_Notes__c</fullName>
        <label>Status Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Awaiting Imp Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting Inventory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Build In Progess - Final QC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Build In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Checking Inventory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready to OC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Received Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rekick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Segment Config -1st Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Segment Config-2nd Pass</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sys_Admin__c</fullName>
        <inlineHelpText>Enter in the name of the Sys Admin.</inlineHelpText>
        <label>Sys Admin</label>
        <length>65</length>
        <type>Text</type>
    </fields>
    <label>Server Build</label>
    <listViews>
        <fullName>A2A4</fullName>
        <booleanFilter>(1 or 2) and 3</booleanFilter>
        <columns>Expedite__c</columns>
        <columns>Device_Description__c</columns>
        <columns>Account_Name__c</columns>
        <columns>Acct_Number__c</columns>
        <columns>Account_Manager__c</columns>
        <columns>Segment_Configuration__c</columns>
        <columns>Online_Complete__c</columns>
        <columns>Status__c</columns>
        <columns>Status_Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.LAST_NAME</field>
            <operation>contains</operation>
            <value>ribble</value>
        </filters>
        <filters>
            <field>OWNER.LAST_NAME</field>
            <operation>contains</operation>
            <value>danskin</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Online Complete,Cancelled</value>
        </filters>
        <label>A2/A4</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>OWNER.ALIAS</columns>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Device_Type__c</columns>
        <columns>Device_Description__c</columns>
        <columns>Segment_Configuration__c</columns>
        <columns>Online_Complete__c</columns>
        <columns>Expedite__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>AllExpedite</fullName>
        <columns>OWNER.ALIAS</columns>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Device_Type__c</columns>
        <columns>Device_Description__c</columns>
        <columns>Segment_Configuration__c</columns>
        <columns>Online_Complete__c</columns>
        <columns>Expedite__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Expedite__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Expedite</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>AllServerBuild</fullName>
        <columns>OWNER.ALIAS</columns>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>Acct_Number__c</columns>
        <columns>Account_Manager__c</columns>
        <columns>Status__c</columns>
        <columns>Device_Type__c</columns>
        <columns>Device_Description__c</columns>
        <columns>Segment_Configuration__c</columns>
        <columns>Online_Complete__c</columns>
        <columns>Expedite__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Online Complete,Cancelled</value>
        </filters>
        <label>All Server Build</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>Andrea_Campos_Server_Builds</fullName>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>Account_Manager__c</columns>
        <columns>Acct_Number__c</columns>
        <columns>Status_Notes__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Online Complete</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Cancelled</value>
        </filters>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>equals</operation>
            <value>acampos</value>
        </filters>
        <label>Andrea Campos Server Builds</label>
        <sharedTo>
            <roleAndSubordinates>INT - Sr. Mgr (WIN B)</roleAndSubordinates>
            <roleAndSubordinates>INT - TL (WIN I-11)</roleAndSubordinates>
            <roleAndSubordinates>INT - TL (WIN I-9)</roleAndSubordinates>
            <roleAndSubordinates>INT - TL Linux (Int2,Int4)</roleAndSubordinates>
            <roleAndSubordinates>INT - TL Windows (Int1)</roleAndSubordinates>
            <roleAndSubordinates>INT - TL Windows (Int3)</roleAndSubordinates>
            <roleAndSubordinates>INT - TL Windows (Int5)</roleAndSubordinates>
            <roleAndSubordinates>RES - TL Custom</roleAndSubordinates>
            <roleAndSubordinates>US Director – After Hours</roleAndSubordinates>
            <roleAndSubordinates>US Sr Manager - Corporate Spears</roleAndSubordinates>
            <roleAndSubordinates>US Sr Manager - Corporate Ulm</roleAndSubordinates>
            <roleAndSubordinates>US TL - B2</roleAndSubordinates>
            <roleAndSubordinates>US TL - B4</roleAndSubordinates>
            <roleAndSubordinates>US TL - B5</roleAndSubordinates>
            <roleAndSubordinates>US TL - B7</roleAndSubordinates>
            <roleAndSubordinates>US TL - B8</roleAndSubordinates>
            <roleAndSubordinates>US VP - Corporate Support</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Lee_Cano_Server_Builds</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Account_Name__c</columns>
        <columns>Account_Manager__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <columns>Status_Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Online Complete</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Cancelled</value>
        </filters>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>equals</operation>
            <value>lee.cano</value>
        </filters>
        <label>Lee Cano Server Builds</label>
    </listViews>
    <listViews>
        <fullName>MyExpedite</fullName>
        <columns>OWNER.ALIAS</columns>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Device_Type__c</columns>
        <columns>Device_Description__c</columns>
        <columns>Segment_Configuration__c</columns>
        <columns>Online_Complete__c</columns>
        <columns>Expedite__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Expedite__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Expedite</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>P2P4</fullName>
        <booleanFilter>(1 or 2) and 3</booleanFilter>
        <columns>Account_Name__c</columns>
        <columns>Acct_Number__c</columns>
        <columns>Device_Description__c</columns>
        <columns>Segment_Configuration__c</columns>
        <columns>Online_Complete__c</columns>
        <columns>Status__c</columns>
        <columns>Status_Notes__c</columns>
        <columns>Expedite__c</columns>
        <columns>Account_Manager__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.LAST_NAME</field>
            <operation>contains</operation>
            <value>Tankersley</value>
        </filters>
        <filters>
            <field>OWNER.LAST_NAME</field>
            <operation>contains</operation>
            <value>Cano</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Online Complete,Cancelled</value>
        </filters>
        <label>P2/P4</label>
    </listViews>
    <nameField>
        <label>Build Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Server Build</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>